# LLLang-rs

./: .gitignore  Cargo.toml  Readme.md  fuzz_seed.ll
examples/: bf.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
lib/: alloc.ll  basic.ll  io.ll  math.ll  print.ll  vec.ll  win32.ll
lib/lib_module/: a.ll  b.ll
lib/win32/: alloc.ll  info.ll  io.ll  processthread.ll  sync.ll
src/: lib.rs  main.rs  tools.rs
src/back/: abi.rs  abi_normalize.rs  emulator.rs  layout.rs  mod.rs  regalloc.rs  register.rs  replace_large_values.rs  selector.rs  vcode.rs  x64_asm.rs  x64_calling_convention.rs  x86_asm.rs  x86_asm_select.rs
src/front/: ast.rs  collect.rs  cst.rs  error.rs  lower.rs  lower_func.rs  mod.rs  parser.rs  pos.rs  resolve.rs  scope.rs  type_func.rs  type_solver.rs
src/mid/: ir.rs  mod.rs  render.rs
src/mid/analyse/: alias.rs  dom_info.rs  lattice.rs  mod.rs  usage.rs  use_info.rs  value_dom.rs
src/mid/normalize/: mod.rs  remove_entry_phis.rs  split_critical_edges.rs
src/mid/opt/: block_threading.rs  cond_prop.rs  dce.rs  flow_simplify.rs  gc.rs  gvn.rs  inline.rs  instr_simplify.rs  mem_forwarding.rs  mod.rs  param_combine.rs  phi_combine.rs  phi_pushing.rs  phi_simplify.rs  runner.rs  sccp.rs  slot_to_param.rs  slot_to_phi.rs  slot_to_ssa.rs
src/mid/util/: assert.rs  bit_int.rs  cast_chain.rs  clone_func.rs  lattice.rs  mod.rs  verify.rs  visit.rs
src/util/: arena.rs  internal_iter.rs  mod.rs
tests/root/: clone_func.rs  fuzz.rs  mod.rs  util.rs  verifier.rs
tests/root/full/: arith.ll  lang.ll  mod.rs  opt.ll  runner.rs  seq.ll
