[package]
name = "lllang"
version = "0.1.0"
authors = ["Karel Peeters <karel.peeters.leuven@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.6.1"
clap = "3.0.0-beta.2"
derive_more = "0.99.11"
fixedbitset = "0.4.2"
walkdir = "2.3.1"
itertools = "0.10.0"
static_assertions = "1.1.0"
regalloc2 = "0.5.1"

[dev-dependencies]
rand = "0.8.5"